; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/net/extr_psock_tpacket.c___v1_v2_rx_kernel_ready.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/net/extr_psock_tpacket.c___v1_v2_rx_kernel_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @__v1_v2_rx_kernel_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__v1_v2_rx_kernel_ready(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %13 [
    i32 129, label %7
    i32 128, label %10
  ]

7:                                                ; preds = %2
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @__v1_rx_kernel_ready(i8* %8)
  store i32 %9, i32* %3, align 4
  br label %15

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @__v2_rx_kernel_ready(i8* %11)
  store i32 %12, i32* %3, align 4
  br label %15

13:                                               ; preds = %2
  %14 = call i32 @bug_on(i32 1)
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %13, %10, %7
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @__v1_rx_kernel_ready(i8*) #1

declare dso_local i32 @__v2_rx_kernel_ready(i8*) #1

declare dso_local i32 @bug_on(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
